<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".SignInActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:autofillHints="username"
            android:drawableStart="@drawable/person"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <CheckBox
            android:id="@+id/keepSignedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:text="@string/keep_me_signed_in" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/keepSignedIn"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_in_btn"
            android:layout_marginTop="20dp"
            android:text="@string/do_not_have_an_account"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />


    </RelativeLayout>
</ScrollView>
