<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".SignUpActivity">

        <!-- App Logo -->
        <ImageView
            android:id="@+id/signUpAppIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <!-- Sign Up textView-->
        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpAppIcon"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up_to_every_lira"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Username input -->
        <EditText
            android:id="@+id/signUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpTextView"
            android:autofillHints="username"
            android:drawableStart="@drawable/person"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp" />

        <!-- Password input -->
        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpUsername"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Confirm password input  -->
        <EditText
            android:id="@+id/signUpPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpPassword"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <!-- keepMeSignIn checkbox -->
        <CheckBox
            android:id="@+id/keepSignedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpPasswordConfirmation"
            android:text="@string/keep_me_signed_in" />

        <!-- Sign Up button -->
        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/keepSignedIn"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up"
            tools:ignore="TextContrastCheck" />

        <!-- Sign In button -->
        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpBtn"
            android:layout_marginTop="20dp"
            android:text="@string/have_an_account"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>
</ScrollView>
