<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".UserInfoActivity">

        <!--App Logo ImageView -->
        <ImageView
            android:id="@+id/appLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <!-- Username -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:autofillHints="username"
            android:drawableStart="@drawable/person"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp" />

        <!-- New Password -->
        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/lock"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Update Credentials Button-->
        <Button
            android:id="@+id/updateCredentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newPassword"
            android:layout_marginTop="20dp"
            android:text="@string/update_credentials"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <!-- Sign Out Button -->
        <Button
            android:id="@+id/signOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateCredentials"
            android:layout_marginTop="10dp"
            android:text="@string/sign_out"
            tools:ignore="TextContrastCheck" />

        <!-- Cancel Button -->
        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signOut"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>
</ScrollView>
