<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:textAlignment="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".WelcomeActivity">

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/savings"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/welcomeImage"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="3dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeTextView"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signInBtn"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>
</ScrollView>
