<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".SpecificReportActivity">

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/year"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/yearsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/year"
        android:contentDescription="@string/year"
        android:visibility="gone"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/yearsSpinner"
        android:text="@string/month"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/monthsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/month"
        android:visibility="gone"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/getReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yearsSpinner"
        android:layout_centerInParent="true"
        android:text="@string/get_report"
        android:visibility="gone" />

    <ListView
        android:id="@+id/expensesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getReport"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/totalCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/expensesList"
        android:layout_marginStart="10dp"
        android:text="@string/total_cost"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/expensesList"
        android:layout_toStartOf="@id/currency"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/expensesList"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="10dp"
        android:text="@string/syp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>



